-- Version 0.1.1 (TBD) --

* Add experimental MacOS support
  - PR #11 by XapaJIaMnu
* Fix entry_operator++ being recursive
  - Ticket #15 by oktonion
* Fix some compiler warnings
  - PR #13 by TryExceptElse
* Fix compilation on MSVC failing due to missing F_OK macro
  - PR #9 by aarcangeli
* Fix mode loss problem on MinGW
  - PR #8 by Bihlerben
* Fix MinGW compilation error due to undeclared identifiers
  - PR #6 by Bihlerben
* Fix compilation error with entry_iterator.cpp on UNIX
  - PR #4 by progsource
* Improve documentation
  - PR #1 by jibsen
  - PR #3 by progsource

-- Version 0.1.0 (2017-10-28) --

* Add Pathie::Tempdir and Pathie::Tempfile classes for
  creating temporary directories and files.
* Add Pathie::entry_iterator, Path::begin_entries(), and
  Path::end_entries(). These allow you to use real C++
  iterators for working with directory entries.
* Change Path::find() to take a callback instead of std::function to
  make it compile under C++98.
* Add Path::operator/=.
* Add `const' qualifier to Path::fopen() and Path::touch() as these
  methods leave the path itself unchanged.
* Add C++98 compatibility (instead of just C++11).
* Mark stream replacements as experimental. They are mostly untested
  and I don't really use them.
* Add PATHIE_BUILD_STREAM_REPLACEMENTS for building the stream
  replacements.
* Rename build option ASSUME_UTF8_ON_UNIX to
  PATHIE_ASSUME_UTF8_ON_UNIX.
* Switch license from GPL3 to BSD-2clause.
* Drop support for expanding "~username/foo" constructs. This
  nonstandard extension was unportable and caused problems when
  linking Pathie statically.
* Add Path::utf8_str() method.
* Restructure header #include order. Pathie now requires you
  to specify the exact header to include (e.g. <pathie/path.hpp>)
  instead of one global header. There was no point in having the
  stream replacements included if not required.
* Fix compilation problem with _PATHIE_UNIX not being defined